tests/pos/i10383.scala
//> using options -source future -deprecation -Werror

def r = BigInt(1) to BigInt(3) // error
